# simulation

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  format_code.sh  input.txt  inputVirus.txt  input_big.txt  input_medium.txt  simulation.csv
include/: logging.hpp
include/agents/: agents.h  peoples.h
include/city/: city.h
include/disease/: disease.h
include/gui/: GraphLayout.h  GraphWindow.h
include/matplotlib-cpp/: matplotlib-cpp.h
include/simulation/: engine.h
include/utils/: SimSettings.h  SimStatsLogger.h  utils.h
include/visitors/: NodeVisitor.h  ShapeMakerVisitor.h
src/: CMakeLists.txt  main.cc
src/agents/: CMakeLists.txt  agents.cc  peoples.cc
src/city/: CMakeLists.txt  city.cc
src/disease/: CMakeLists.txt  disease.cc
src/gui/: CMakeLists.txt  GraphLayout.cc  GraphWindow.cc
src/simulation/: CMakeLists.txt  engine.cc
src/utils/: CMakeLists.txt  SimSettings.cc  SimStatsLogger.cc  utils.cc
src/visitors/: CMakeLists.txt  ShapeMakerVisitor.cc
tests/: CMakeLists.txt  test_agent.cc  test_city.cc  test_disease.cc  test_worker.cc
